--- a/config.json.example
+++ b/config.json.example
@@ -5,7 +5,7 @@
     "custom_proxies":[
         {
             "name": "VPN Bypass",
-            "host": "vpn-bypass",
+            "host": "192.168.178.42",
             "port": 1337
         }]
 }
